--- a/pages/nf4514/n12642416.md
+++ b/pages/nf4514/n12642416.md
@@ -44,6 +44,43 @@
  以下是有关病毒疫情的实时更新：
 </h4>
 <h3>
+ 亚利桑那州染疫住院率连续两刷新纪录
+</h3>
+<p>
+ 亚利桑那州共和党州长道格·杜西（Doug Ducey）在推特上发布的图表显示，他的州连续两录得最高住院人数。
+</p>
+<p>
+ 州长在周四（12月24日）的一条推文中说，在亚利桑那州染疫住院的病人从昨天的4,163人增加到至少4,221人。
+</p>
+<p>
+ 杜西在推特上说，Covid-19（中共病毒）患者使用的重症监护病床床位从972个减少到965个，而呼吸机使用量也从673个减少到620个。
+</p>
+<p>
+ 州长在推特上说，在亚利桑那州的医院里，类似中共病毒染疫患者的比例目前为16.6％。
+</p>
+<p>
+ 另外，昨天该州至少新增7,046例染疫患者和115例死亡。自大流行开始以来，该州已有480,319人染疫，8,294人因此死亡。
+</p>
+<p>
+ 根据ADHS网站的显示，亚利桑那州共做了3,107,007项中共病毒测试，其中，周四给出了23,378项测试结果。
+</p>
+<h3>
+ 黎巴嫩连续两天创下最大单日病例增幅
+</h3>
+<p>
+ 黎巴嫩公共卫生部周四（12月24日）表示，在过去24小时内，黎巴嫩至少新增2,708例中共病毒（
+ <ok href="https://www.epochtimes.com/gb/tag/%E6%AD%A6%E6%B1%89%E8%82%BA%E7%82%8E.html">
+  武汉肺炎
+ </ok>
+ ）病例，这是该国自大流行开始以来有记录的最高单日感染量。
+</p>
+<p>
+ 周三，黎巴嫩已经创下较之前的最高单日增幅——2,246例。
+</p>
+<p>
+ 该国目前共有165,934例。该部还补充说，在过去24小时内还记录了20例新增死亡，全国死亡人数上升到1,353人。
+</p>
+<h3>
  意大利染疫病例超过200万
 </h3>
 <p>
@@ -529,11 +566,7 @@
  世卫将访武汉病毒所？石正丽：方案不由我定
 </h3>
 <p>
- 世卫组织率领的国际团队将于明年1月前往中国，调查中共病毒（
- <ok href="https://www.epochtimes.com/gb/tag/%E6%AD%A6%E6%B1%89%E8%82%BA%E7%82%8E.html">
-  武汉肺炎
- </ok>
- ）疫情源头，曾被质疑外泄病毒的武汉病毒研究所石正丽再次受到关注。她近日表示，欢迎他们到研究所访问，但她不能决定具体方案。
+ 世卫组织率领的国际团队将于明年1月前往中国，调查中共病毒（武汉肺炎）疫情源头，曾被质疑外泄病毒的武汉病毒研究所石正丽再次受到关注。她近日表示，欢迎他们到研究所访问，但她不能决定具体方案。
 </p>
 <p>
  前香港大学病毒学专家闫丽梦流亡美国，她在7月表示，中共病毒来自中共军方实验室，石正丽公布的RaTG13序列是为掩盖真相。
