同步于: 12月25日4时52分

--- a/pages/nsc418/n12642416.md
+++ b/pages/nsc418/n12642416.md
@@ -44,6 +44,24 @@
  以下是有关病毒疫情的实时更新：
 </h4>
 <h3>
+ 新泽西州要求来自英国的乘客做病毒测试
+</h3>
+<p>
+ 新泽西州州长办公室发布的消息称，州长菲尔·墨菲（Phil Murphy）要求所有始发于英国、飞往纽瓦克自由国际机场（Newark Liberty International Airport）的联合航空航班乘客，在到达该州之前必须接受中共病毒测试。
+</p>
+<p>
+ 在此之前，英国宣布在该国发现中共病毒新变体。
+</p>
+<p>
+ 乘客将需要在起飞72小时内对进行病毒测试。
+</p>
+<p>
+ “为了加强与我们的合作伙伴——美联航的现有旅行协议，从12月28日周一（12月28日）开始，所有从英国起飞、飞往纽瓦克自由国际机场的美联航乘客都必须出示在起飞前72小时内获得COVID-19（中共病毒）测试、且结果呈阴性的证明。在我们继续经历第二波COVID-19（中共病毒）疫情之际，至关重要的是，我们应采取一切预防措施，以减轻进一步传播的可能性。”
+</p>
+<p>
+ 本周早些时候，其它三家航空公司均同意所有从英国进入纽约的旅客须做病毒测试。
+</p>
+<h3>
  亚利桑那州染疫住院率连续两刷新纪录
 </h3>
 <p>
