--- a/pages/p5/956952.md
+++ b/pages/p5/956952.md
@@ -1,4 +1,4 @@
-### 每套最大跌幅72万：天津楼市拐点真来了……(图)
+### 北京当局拿阿里巴巴而不是腾讯开刀的原因(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -7,9 +7,9 @@
 
 <div class="article_right" style="fone-color:#000">
  <p style="text-align: center;">
-  <img alt="天津房价的惊人下跌会造成什么影响？" src="https://img2.secretchina.com/pic/2017/4-27/p1607621a314873724-ss.jpg" style="height:336px; width:600px"/>
+  <img alt="阿里巴巴 腾讯 马云" src="https://img2.secretchina.com/pic/2019/8-6/p2485722a252898196-ss.jpg" style="height:337px; width:600px"/>
   <br>
-   天津房价的惊人下跌会造成什么影响？（图片来源：Pixabay）
+   阿里巴巴集团涉嫌垄断行为遭当局立案调查。（图片来源：Getty Images）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -29,94 +29,51 @@
   </div>
  </div>
  <p>
-  【看中国2020年10月28日讯】近期，天津楼市降到三年前水平迅速登上了热搜。根据资料显示，天津
-  <span href="https://www.secretchina.com/news/gb/tag/房价" target="_blank">
-   房价
-  </span>
-  每平米跌了5000元，有的区两周套房最大跌幅则超过了72万元。
+  【看中国2020年12月25日讯】中国市场监管总局已对
+  <strong>
+   阿里巴巴
+  </strong>
+  集团涉嫌垄断行为立案调查。金融监管部门也宣布，将再次约谈
+  <strong>
+   <span href="https://www.secretchina.com/news/gb/tag/蚂蚁集团" target="_blank">
+    蚂蚁集团
+   </span>
+  </strong>
+  。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  作为北方最大的城市之一，
-  <span href="https://www.secretchina.com/news/gb/tag/天津" target="_blank">
-   天津
+  中共党报《人民日报》12月24日发布文章称，“加强反垄断监管是为了更好发展”，并说中央政治局会议和中央经济工作会议均明确要求强化反垄断和防止资本无序扩张。
+ </p>
+ <p>
+  这意味反垄断计划由中南海最高层决定。这背后有一个政治信号，那就是没有任何企业，没有任何个人，可以挑战中共。无论阿里巴巴集团规模有多大，或者马云有多大本事，中共想要搞掉
+  <span href="https://zh.wikipedia.org/zh-cn/%E8%9A%82%E8%9A%81%E9%9B%86%E5%9B%A2" target="_blank">
+   蚂蚁集团
   </span>
-  的城市地位不言而喻，那么天津房价为什么此时会下跌？这样的下跌又会造成什么影响？
+  就和掐死一只蚂蚁一样简单。
  </p>
  <p>
-  对于全国多数城市而言，大家苦高房价已经很久了，只是大家都不清楚
-  <span href="https://www.secretchina.com/news/gb/tag/拐点" target="_blank">
-   拐点
+  <span href="https://zh.wikipedia.org/zh-cn/%E9%98%BF%E9%87%8C%E5%B7%B4%E5%B7%B4%E9%9B%86%E5%9B%A2" target="_blank">
+   阿里巴巴集团
   </span>
-  何时会到来。
- </p>
- <p>
-  天津和其他城市一样，均在2016年
-  <br>
-   前后迎来了一波暴涨行情，两年翻一番则是一种常态。数据显示，2016年天津房子均价为12000元/平米，但到了2018年时，天津的房价就突破了20000元大关。
-  </br>
- </p>
- <p>
-  快速上涨的房价是城市最大的天然门槛，对于想留下来的年轻人，买房或者不买房就是一个清晰的衡量标准。
- </p>
- <p>
-  对于目前大多数年轻人来说，房子和婚姻就是压在他们头上最大的“大山”。另外，现在的年轻人月光是一种常态，面对动辄百万的房价，按照他们的收入水平，或许攒上10年也不一定攒得出一套房子的首付。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  所以，在高房价的挤压下，大批的年轻人就只能离开一二线城市回到三四线或者更远的城市。在这种恶性循环下，一、二线城市最终等不来“新鲜的血液”，下跌就是迟早的事情。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  早在2018年，建行董事长田国立就曾说过：“现在买房就是高位接盘”。为了佐证他的观点，他将中美两国住房市场作了一个对比：美国，三十万亿美元；
-  <span href="https://www.secretchina.com" target="_blank">
-   中国
+  创始人马云和
+  <span href="https://zh.wikipedia.org/zh-cn/%E8%85%BE%E8%AE%AF" target="_blank">
+   腾讯
   </span>
-  ，四十万亿美元。
+  公司创始人马化腾在中国富豪榜上名列第一和第二位。为什么被开刀的是阿里巴巴而不是腾讯？
  </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
  <p>
-  对比之下，我们发现现在中国的
-  <span href="https://www.secretchina.com/news/gb/tag/房地产" target="_blank">
-   房地产
+  马云的金融布局有目共睹，马化腾也不甘落后。
+  <span href="https://www.secretchina.com/news/gb/tag/腾讯" target="_blank">
+   腾讯
   </span>
-  市场确实偏贵，按照居民收入比来说，仍有9亿人月均不足两千元，但中中国的房产均价都已突破10000元/平米，如果去掉公摊面积，那么这一数字只会更高。
+  的微信支付、财付通等，已经形成了对中国人日常生活的全面覆盖。根据腾讯的财报数据，微信及海外版Wechat的合并月活跃账户数达12.128亿人。在社交的场景之下，微信的控制力甚至超过蚂蚁集团。
+ </p>
+ <p>
+  从商业角度来看，差别是格局和手段的对比。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -131,11 +88,7 @@
   </div>
  </center>
  <p>
-  目前，中国房地产
-  <span href="https://www.secretchina.com/news/gb/tag/信贷" target="_blank">
-   信贷
-  </span>
-  总量已经超过38万亿，占据了整个信贷规模的28%。这一比例放在国际上都是一个很高的水平，所以我们不能不警惕。
+  腾讯是在投资项目：我不懂你这个项目，而你的项目已经比较成熟，所以我给你足够多的钱，再给你足够多的流量，一起赚钱。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -150,7 +103,21 @@
   </div>
  </center>
  <p>
-  天津作为四大直辖市之一，很多时候都起到了一个风向标作用，虽然它和北上广深不在一个量级上，但和其他新一线城市比起来，还是具有一定优势的。
+  而阿里巴巴则是在买项目：我看到你这个项目很赚钱，所以我决定买下来，再换上我的团队。所以马云控制不了美团，美团就成了阿里巴巴的敌人，控制不了京东，京东就成了阿里巴巴的敌人......说白了就是利用官商勾结搞垄断，而关键的是，搞垄断获得的利益还不是当局的政治派系所拥有……（文章全文请见下面链接，以及观看视频了解内容）
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p style="text-align:center">
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -165,7 +132,20 @@
   </div>
  </center>
  <p>
-  另外，在人口方面它目前同深圳常住人口差不多，但外来人口方面，它显然连其他新一线城市都不如。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -184,7 +164,9 @@
   </ins>
  </center>
  <p>
-  2019年，天津的GDP为14104.28亿元，同比增长4.8%，人均方面天津人均GDP也突破了9万元。
+  <span href="https://www.secretchina.com/kzgd/subscribe.html" target="_blank">
+   （在五彩缤纷的世界、信息爆炸的时代，真相就是先机和财富。成为《看中国》荣誉会员，就会最先看到“天钧政经”最全、更多、更精彩的评论分析文章。）
+  </span>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -199,7 +181,6 @@
   </div>
  </center>
  <p>
-  从现实的角度，能在天津买房的人大多都已经买了，甚至有人也都拥有了两套或者以上的住房，对于买不起的，以前他都买不起，现在一平米三四万，他就更加买不起了。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -214,7 +195,6 @@
   </div>
  </center>
  <p>
-  笔者认为，此次天津房价下跌确实透露出一个信号，拐点要来了。因为经过二三十年发展，房地产确实已经透支了很多人未来二三十年的财富，且我们居民的房产信贷规模还在逐年增加。不仅如此，在我国的居民财富结构上，房产几乎占据了个人财富的70%以上，结构非常不合理，如果发生危机，那么将是毁灭性的。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -229,7 +209,6 @@
   </div>
  </center>
  <p>
-  从长远来看，房地产下跌周期要来了，且很有可能持续十年以上。从个人角度而言，我认为还是要卖掉手中多余的房产，以保证财富不会大幅缩水。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -243,27 +222,8 @@
    </center>
   </div>
  </center>
- <p style="margin-bottom:12px;">
-  <hr style="border-top: 1px dashed  ;" width="100%"/>
-  <br/>
-  【诚征荣誉会员】溪流能够汇成大海，小善可以成就大爱。我们向全球华人诚意征集万名
-  <span href="/kzgd/subscribe.html" target="_blank">
-   荣誉会员
-  </span>
-  ：每位
-  <span href="/kzgd/subscribe.html" target="_blank">
-   荣誉会员
-  </span>
-  每年只需支付一份订阅费用（$68美元/年），成为《看中国》网站的
-  <span href="/kzgd/subscribe.html" target="_blank">
-   荣誉会员
-  </span>
-  ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
-  <center>
-   <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
-   </span>
-  </center>
+ <p>
+  (文章与视频仅代表作者个人立场和观点)
   <center>
    <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
     <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
@@ -276,6 +236,44 @@
     </center>
    </div>
   </center>
+  <p>
+   责任编辑:辛荷
+来源:
+   <span href="/news/gb/tag/看中国  ">
+    看中国
+   </span>
+  </p>
+  <p>
+   本文短网址:
+   <input name="lname" onclick="javascript:this.focus();this.select();" onmouseover="javascript:this.focus();this.select();" type="text" value="http://kzg.io/gb40wi"/>
+   转载请注明出处，
+   <span style="color:red">
+    严禁建立镜像网站
+   </span>
+   .
+  </p>
+  <p style="margin-bottom:12px;">
+   <hr style="border-top: 1px dashed  ;" width="100%"/>
+   <br/>
+   【诚征荣誉会员】溪流能够汇成大海，小善可以成就大爱。我们向全球华人诚意征集万名
+   <span href="/kzgd/subscribe.html" target="_blank">
+    荣誉会员
+   </span>
+   ：每位
+   <span href="/kzgd/subscribe.html" target="_blank">
+    荣誉会员
+   </span>
+   每年只需支付一份订阅费用（$68美元/年），成为《看中国》网站的
+   <span href="/kzgd/subscribe.html" target="_blank">
+    荣誉会员
+   </span>
+   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
+   <center>
+    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
+     <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
+    </span>
+   </center>
+  </p>
   <center>
    <div>
     <div id="txt-mid2-t22-2017" style="display: block;margin-top:8px;max-height: 351px;  overflow: hidden;">
@@ -293,13 +291,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/950645.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/950645.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/950645.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/10/28/950645.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/956952.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/956952.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/956952.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/12/25/956952.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p5/950645.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p5/956952.md' width='0px' height='0px'/>
