--- a/pages/nsc418/n12642416.md
+++ b/pages/nsc418/n12642416.md
@@ -44,6 +44,31 @@
  以下是有关病毒疫情的实时更新：
 </h4>
 <h3>
+ 辉瑞CEO：对
+ <ok href="https://www.epochtimes.com/gb/tag/%E7%96%AB%E8%8B%97.html">
+  疫苗
+ </ok>
+ 对抗新的病毒变种“谨慎乐观”
+</h3>
+<p>
+ 辉瑞公司的首席执行官阿尔伯特·布尔拉（Albert Bourla）说，他对该公司的
+ <ok href="https://www.epochtimes.com/gb/tag/%E7%96%AB%E8%8B%97.html">
+  疫苗
+ </ok>
+ 将能够抵御在英国发现的新的中共病毒变种感到乐观。
+</p>
+<p>
+ 伯拉周四在关于疫苗的“纳瓦霍市政厅”（Navajo Nation Town Hall ）说：“我谨慎乐观。”“我们已经看到一些数据，证明这种新菌株对疫苗同样敏感。”“我们正在进行从现在起的10天内或大约两周之内完成的具体研究，我们正在测试以确定该新菌株是否同样对我们的疫苗敏感，并会被疫苗中和。”
+</p>
+<p>
+ 布尔拉在市政厅解释说，在临床试验中，对疫苗的不良反应“非常罕见”。现在已经将疫苗分发给了数百万人，少数人将出现过敏反应。在美国，只有不到10例报告。
+</p>
+<p>
+</p>
+<p>
+ 布尔拉解释说：“自清洁水（Clean Water）以来，疫苗是最重要的卫生保健干预措施。”“自从人们能够获得水源以来，没有什么能挽救更多的生命。没有什么能比接种疫苗创造更多的科学医学突破了。”
+</p>
+<h3>
  新泽西州要求来自英国的乘客做病毒测试
 </h3>
 <p>
@@ -223,22 +248,14 @@
  他补充说，将立即对来自南非的旅客进行限制。
 </p>
 <h3>
- 塞尔维亚总理成为欧洲首位接受
- <ok href="https://www.epochtimes.com/gb/tag/%E7%96%AB%E8%8B%97.html">
-  疫苗
- </ok>
- 的总理
+ 塞尔维亚总理成为欧洲首位接受疫苗的总理
 </h3>
 <figure class="wp-caption aligncenter" id="attachment_12643222" style="width: 600px">
  <ok href="https://i.epochtimes.com/assets/uploads/2020/12/GettyImages-1230288769.jpg">
   <img alt="" class="size-large wp-image-12643222" src="https://i.epochtimes.com/assets/uploads/2020/12/GettyImages-1230288769-600x400.jpg"/>
  </ok>
  <br/><figcaption class="wp-caption-text">
-  塞尔维亚总理安娜·布朗纳比克（Ana Brnabic，中）于2020年12月24日在贝尔格莱德接种Covid-19
-  <ok href="https://www.epochtimes.com/gb/tag/%E7%96%AB%E8%8B%97.html">
-   疫苗
-  </ok>
-  后向媒体发表讲话。（Photo by ANDREJ ISAKOVIC/AFP via Getty Images）
+  塞尔维亚总理安娜·布朗纳比克（Ana Brnabic，中）于2020年12月24日在贝尔格莱德接种Covid-19疫苗后向媒体发表讲话。（Photo by ANDREJ ISAKOVIC/AFP via Getty Images）
  </figcaption><br/>
 </figure><br/>
 <p>
