--- a/pages/nsc418/n12644666.md
+++ b/pages/nsc418/n12644666.md
@@ -15,7 +15,7 @@
 #### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 <div><p>
- 【大纪元2020年12月25日讯】（大纪元记者陈霆、徐简综合报导）美国疾病管制与预防中心（CDC）表示，由于在英国流行的新变种病毒具有高传染力，从下周一开始，美国政府将要求所有从英国飞抵美国的乘客在出发72小时内的COVID-19测试结果必须为阴性。
+ 【大纪元2020年12月25日讯】（大纪元记者陈霆、徐简、谢佳宣综合报导）美国疾病管制与预防中心（CDC）表示，由于在英国流行的新变种病毒具有高传染力，从下周一开始，美国政府将要求所有从英国飞抵美国的乘客在出发72小时内的COVID-19测试结果必须为阴性。
 </p>
 <p>
  一项初步研究显示，英国出现的
