--- a/pages/nf4514/n12644666.md
+++ b/pages/nf4514/n12644666.md
@@ -5,7 +5,7 @@
 
 
 
-<div><img alt="【疫情更新12.25】英国人赴美前检测须呈阴性" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/12/GettyImages-1292639119-600x400.jpg"/>
+<div><img alt="【疫情更新12.25】德、瑞士及日本现变种病毒" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/12/GettyImages-1292639119-600x400.jpg"/>
 <div class="caption">
  旅客在抵达洛杉矶国际机场（LAX）后，开始穿着个人防护设备。 (Mario Tama/Getty Images)
 </div></div><hr/>
