--- a/pages/nf4514/n12644666.md
+++ b/pages/nf4514/n12644666.md
@@ -1,4 +1,4 @@
-### 【疫情更新12.25】英国人赴美前检测须呈阴性
+### 【疫情更新12.25】德、瑞士及日本现变种病毒
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -49,10 +49,67 @@
  以下是有关病毒疫情的实时更新：
 </h4>
 <h3>
+ 美国新病例增加 田纳西州及加州位居在前
+</h3>
+<p>
+ 近期，美国各地的病毒感染数骤增，其中田纳西州和加利福尼亚州已成为最新浪潮的中心。
+</p>
+<p>
+ 根据美国疾病控制中心的数据，田纳西州在过去7天内每10万人中新增119例。全国人口最多的加州排名第二，为每10万人新增105例。罗德岛州和亚利桑那州近期也出现了高峰。
+</p>
+<p>
+ 全美各地的州和地方领导人都敦促美国人不要在假期出行，并称感恩节庆祝活动使病毒进一步扩散。但根据美国运输安全管理局的数据，诞前夕，美国航空旅行人数连续六天接近或超过100万人次，并在周三（12月23日）刷新了疫情纪录，有100万名旅客搭机（1,191,123）。
+</p>
+<p>
+ 据美国政府规定，卫生保健工作者、养老院的老人、民选官员和消防员都是最先接受疫苗的人群。大多数美国人被告知可能在六个月，或更长时间后才有资格接种疫苗。
+</p>
+<p>
+ 目前，另一种更具传播性的变种病毒已经在英国迅速蔓延，尚不清楚现阶段开发出的疫苗是否对新病株有效。
+</p>
+<p>
+ 有关旅行禁令方面，美国没有禁止英国旅客入境，但纽约州和华盛顿州的州长已下令来自英国的旅行者在抵达时必须进行检疫。
+</p>
+<h3>
+ 意大利12月每日的病死人数再次升高
+</h3>
+<p>
+ 在新一波感染中，意大利死于中共病毒（武汉肺炎）的人数现已超过第一波的死亡人数。
+</p>
+<p>
+ 根据国际政治研究所（ISPI）9月1日至12月25日期间的数据，该国有35,417人死于中共病毒。相比之下，意大利疫情的高峰，即2月21日到8月31日的病死人数为35,376人。
+</p>
+<p>
+ 12月，该国每天的死亡人数再次居高不下，每24小时的病逝人数在600至800人之间。在12月3日，一天之内就有993人死于病毒，这是一个创纪录的数字。
+</p>
+<p>
+ 为了遏制病毒传播，意大利政府从12月25日圣诞节期间到明年1月1日，禁止民众在各地区之间旅行。
+</p>
+<h3>
+ 瑞士疫情专家小组呼吁采取更严格措施
+</h3>
+<p>
+ 瑞士疫情专家小组表示，瑞士应实施更广泛、更严格的防疫措施，并加强检测和追踪，以阻止新菌株的传播。
+</p>
+<p>
+ 目前，瑞士开始进一步分析，以确认新变种病毒是否已普遍在该国传播。瑞士卫生部周四（12月24日）报告了两起确诊变种病毒的病例。
+</p>
+<h3>
+ 俄勒冈州两度现疫情峰值 官员找到“超级传播者”
+</h3>
+<p>
+ 俄勒冈州官员上周表示，最近在该州爆发的两起疫情高峰，很可能是一位“超级传播者”（superspreader）的行为所导致。
+</p>
+<p>
+ 据俄勒冈州道格拉斯县12月17日的声明，当地一为民众明知故犯地在生病的情况下去工作，后来他的病毒检测呈阳性反应。现在已经有两次的疫情峰值追溯到该人身上。第一次疫情导致7人死亡，第二次疫情导致300多人/家庭被迫自我隔离。
+</p>
+<p>
+ 县政府官员将这一事件称为“超级传播者行动”（superspreader action），意指大型聚会，如婚礼、派对或宗教仪式中，有一位参与人是病毒传播者或导致一群人陷入感染风险。
+</p>
+<h3>
  平安夜 美国近百万人搭机返乡
 </h3>
 <p>
- 美国运输安全管理局（TSA）表示周四（12月24日）在全国机场检查了84万人（846,520）。
+ 美国运输安全管理局（TSA）表示，周四（12月24日）在全国机场检查了84万人（846,520）。
 </p>
 <p>
  圣诞前夕，美国航空旅行人数连续六天接近或超过100万人次，并在周三（12月23日）刷新了疫情纪录，有100万名旅客搭机（1,191,123）。今年平安夜乘坐飞机的人数是一年前同一天的三分之一，当时有250多万人乘坐飞机。
@@ -82,21 +139,6 @@
  日本首相菅义伟（Yoshihide Suga）表示，由于人们仍在外出，感染数也随之增加，他敦促人们在新年假期待在家里，尽可能“安静地”庆祝。首相表示，日本已准备引进疫苗，并将2月视为关键决策点。
 </p>
 <h3>
- 莫德纳预计疫苗能抵抗变种病毒
-</h3>
-<p>
- 周三（23日），莫德纳（Moderna）公司表示，预计其疫苗产生的免疫作用对英国发现的变种病毒有效，因为变异不会对新冠病毒的特征刺突蛋白有太大改变。
-</p>
-<p>
- 该公司称将在未来几周对这种疫苗进行进一步的测试，以证实其预期有效性。
-</p>
-<p>
- 德国医药公司BioNTech的首席执行官撒辛（Ugur Sahin）也表示，他认为公司与辉瑞合作开发的疫苗仍对新变种病毒有效。他说，如果无效，还可以直接模仿新的变异设计一种新疫苗，制作的时间在六周内。
-</p>
-<p>
- 周二，英国阿斯利康制药公司也对路透社表示，其疫苗应对变种病毒应当是有效的，并称正进行研究，以全面调查这种变异的影响。
-</p>
-<h3>
  德国出现首例变种病毒
 </h3>
 <p>
@@ -110,6 +152,39 @@
 </p>
 <p>
  这名女性的起飞时间刚好在德国宣布禁止英国航班入境之前的几个小时。20日，德国联邦交通部说，21日0时起至2020年年底禁止来自英国的航班入境。
+</p>
+<h3>
+ 美CDC：所有英国乘客起飞前72小时检测结果必须呈阴性
+</h3>
+<p>
+ 美国CDC在一份声明中表示，由于在英国流行的新变种病毒可能具有高传染力，从下周一开始，美国政府将要求所有从英国飞抵美国的乘客在出发72小时内的COVID-19测试结果必须为阴性。
+</p>
+<p>
+ 如果乘客选择不接受测试，航空公司必须拒绝其登机。
+</p>
+<p>
+ 英国的初步分析表明，这种新变种病毒的传播性可能比以前流行的变种病毒高70%。目前，许多国家对英国旅客关闭边境。
+</p>
+<p>
+ 周四早些时候，美国联合航空公司和达美航空公司表示，他们已要求所有从英国飞往美国的乘客必须提交起飞前72小时内的病毒测试阴性报告。
+</p>
+<p>
+ 美国CDC表示，该命令将于周五签署，并于周一生效。
+</p>
+<h3>
+ 莫德纳预计疫苗能抵抗变种病毒
+</h3>
+<p>
+ 周三（23日），莫德纳（Moderna）公司表示，预计其疫苗产生的免疫作用对英国发现的变种病毒有效，因为变异不会对新冠病毒的特征刺突蛋白有太大改变。
+</p>
+<p>
+ 该公司称将在未来几周对这种疫苗进行进一步的测试，以证实其预期有效性。
+</p>
+<p>
+ 德国医药公司BioNTech的首席执行官撒辛（Ugur Sahin）也表示，他认为公司与辉瑞合作开发的疫苗仍对新变种病毒有效。他说，如果无效，还可以直接模仿新的变异设计一种新疫苗，制作的时间在六周内。
+</p>
+<p>
+ 周二，英国阿斯利康制药公司也对路透社表示，其疫苗应对变种病毒应当是有效的，并称正进行研究，以全面调查这种变异的影响。
 </p>
 <h3>
  担忧禽流感 法国朗德省扑杀4万鸭子
@@ -170,24 +245,6 @@
 </p>
 <p>
  桥本圣子说，未来她将会时时考量到防疫规定，并采取措施来预防传染，例如避免5人以上的聚会场合。
-</p>
-<h3>
- 美CDC：所有英国乘客起飞前72小时检测结果必须呈阴性
-</h3>
-<p>
- 美国CDC在一份声明中表示，由于在英国流行的新变种病毒可能具有高传染力，从下周一开始，美国政府将要求所有从英国飞抵美国的乘客在出发72小时内的COVID-19测试结果必须为阴性。
-</p>
-<p>
- 如果乘客选择不接受测试，航空公司必须拒绝其登机。
-</p>
-<p>
- 英国的初步分析表明，这种新变种病毒的传播性可能比以前流行的变种病毒高70%。目前，许多国家对英国旅客关闭边境。
-</p>
-<p>
- 周四早些时候，美国联合航空公司和达美航空公司表示，他们已要求所有从英国飞往美国的乘客必须提交起飞前72小时内的病毒测试阴性报告。
-</p>
-<p>
- 美国CDC表示，该命令将于周五签署，并于周一生效。
 </p>
 <h3>
  韩国日增病例再创新高
@@ -410,8 +467,6 @@
 <p>
  责任编辑：叶紫微
 </p>
-<div id="gtx-trans" style="position: absolute; left: 259px; top: 957.633px;">
-</div>
 </div>
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
