--- a/pages/nf4514/n12644666.md
+++ b/pages/nf4514/n12644666.md
@@ -5,9 +5,9 @@
 
 
 
-<div><img alt="【疫情更新12.25】“疫苗是川普最大成就”" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/12/12-3.jpg"/>
+<div><img alt="【疫情更新12.25】加州病例数突破200万" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/12/GettyImages-1230018128-1-600x344.jpg"/>
 <div class="caption">
- 图为美国总统川普（特朗普）资料照。(SAUL LOEB / AFP)
+ 2020年12月8日，尽管加州洛杉矶实施了“居家令”，但人们仍在一个中共病毒检测中心排队等候。(FREDERIC J. BROWN/AFP via Getty Images)
 </div></div><hr/>
 
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
