--- a/pages/nsc418/n12646347.md
+++ b/pages/nsc418/n12646347.md
@@ -1,13 +1,13 @@
-### 【疫情更新12.26】法国出现首个新变种病例
+### 【疫情更新12.26】西班牙现四例新变种病例
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
 
 
 
-<div><img alt="【疫情更新12.26】西班牙现四例新变种病例" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/12/GettyImages-1293044575-600x400.jpg"/>
+<div><img alt="【疫情更新12.26】东京疫情创纪录 含新变种" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/12/GettyImages-1230297452-600x400.jpg"/>
 <div class="caption">
- 图为西班牙的医务工作者正在与中共病毒（武汉肺炎）患者交谈。(David Ramos/Getty Images)
+ 2020年12月25日，日本东京的人们正在欢度圣诞节。（PHILIP FONG/AFP via Getty Images）
 </div></div><hr/>
 
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
@@ -45,6 +45,18 @@
   中共病毒
  </ok>
 </h3>
+<figure class="wp-caption aligncenter" id="attachment_12646456" style="width: 600px">
+ <ok href="https://i.epochtimes.com/assets/uploads/2020/12/GettyImages-1293044575.jpg">
+  <img alt="" class="size-medium_vertical wp-image-12646456" src="https://i.epochtimes.com/assets/uploads/2020/12/GettyImages-1293044575-600x400.jpg"/>
+ </ok>
+ <br/><figcaption class="wp-caption-text">
+  图为西班牙的医务工作者正在与中共病毒（
+  <ok href="https://www.epochtimes.com/gb/tag/%E6%AD%A6%E6%B1%89%E8%82%BA%E7%82%8E.html">
+   武汉肺炎
+  </ok>
+  ）患者交谈。(David Ramos/Getty Images)
+ </figcaption><br/>
+</figure><br/>
 <p>
  马德里健康顾问安东尼奥·萨帕特罗（Antonio Zapatero）在周六（12月26日）的新闻发布会上说，该地区于本月初有四人被诊断出感染中共病毒（
  <ok href="https://www.epochtimes.com/gb/tag/%E6%AD%A6%E6%B1%89%E8%82%BA%E7%82%8E.html">
